--- a/index.html
+++ b/index.html
@@ -17,92 +17,17 @@
             justify-content: center;
             align-items: center;
             z-index: 3000;
-            opacity: 0;
-            transition: opacity 2s ease-in-out;
+            opacity: 1;
+            transition: opacity 1s ease-in-out;
         }
 
         #splashScreen img {
             max-width: 100%;
             max-height: 100%;
-            object-fit: contain;
+            object-fit: contain; /* Сохраняет пропорции изображения */
         }
 
-        /* Остальные стили */
-        body {
-            margin: 0;
-            overflow: hidden;
-            background-color: #000;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            font-family: Arial, sans-serif;
-            color: white;
-        }
-        #gameContainer {
-            display: flex;
-            align-items: flex-start;
-            gap: 20px;
-            margin-bottom: 15vh;
-        }
-        canvas {
-            border: 2px solid white;
-            cursor: none;
-        }
-        #touchpad {
-            position: fixed;
-            bottom: -10px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: calc(var(--game-width) + 8px);
-            height: 15vh;
-            background-color: rgba(255, 255, 255, 0.1);
-            border-radius: 10px;
-            z-index: 1000;
-            touch-action: none;
-        }
-        #scoreModal {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.8);
-            justify-content: center;
-            align-items: center;
-            z-index: 1000;
-        }
-        #scoreModalContent {
-            background-color: #222;
-            padding: 20px;
-            border-radius: 10px;
-            text-align: center;
-            color: white;
-            width: 80%;
-            max-width: 300px;
-        }
-        #scoreModalContent h3 {
-            margin: 0 0 10px 0;
-            font-size: 20px;
-        }
-        #scoreModalContent div {
-            margin-bottom: 10px;
-            font-size: 16px;
-        }
-        #restartButton, #instructionButton {
-            width: 100%;
-            padding: 10px;
-            background-color: #444;
-            color: white;
-            border: none;
-            cursor: pointer;
-            font-size: 16px;
-            margin-top: 10px;
-        }
-        #restartButton:hover, #instructionButton:hover {
-            background-color: #666;
-        }
+        /* Стили для предупреждения об ориентации */
         #orientationWarning {
             position: fixed;
             top: 0;
@@ -114,14 +39,104 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            z-index: 2000;
+            z-index: 4000;
             font-size: 24px;
             text-align: center;
             padding: 20px;
             box-sizing: border-box;
-        }
-        #instructionModal {
             display: none;
+        }
+
+        /* Основные стили игры */
+        body {
+            margin: 0;
+            overflow: hidden;
+            background-color: #000;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            font-family: Arial, sans-serif;
+            color: white;
+        }
+
+        #gameContainer {
+            display: flex;
+            align-items: flex-start;
+            gap: 20px;
+            margin-bottom: 15vh; /* Отступ снизу для сенсорной зоны */
+        }
+
+        canvas {
+            border: 2px solid white;
+            cursor: none;
+        }
+
+        #touchpad {
+            position: fixed;
+            bottom: -10px; /* Сенсорная зона на 10px ниже нижней границы холста */
+            left: 50%; /* Центрируем по горизонтали */
+            transform: translateX(-50%); /* Смещаем на половину ширины */
+            width: calc(var(--game-width) + 8px); /* Ширина сенсорной зоны равна ширине холста + 8px (рамка) */
+            height: 15vh; /* Высота сенсорной зоны */
+            background-color: rgba(255, 255, 255, 0.1);
+            border-radius: 10px; /* Закругленные углы */
+            z-index: 1000;
+            touch-action: none;
+        }
+
+        /* Модальные окна */
+        #scoreModal {
+            display: flex;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.8);
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+        }
+
+        #scoreModalContent {
+            background-color: #222;
+            padding: 20px;
+            border-radius: 10px;
+            text-align: center;
+            color: white;
+            width: 80%;
+            max-width: 300px;
+        }
+
+        #scoreModalContent h3 {
+            margin: 0 0 10px 0;
+            font-size: 20px;
+        }
+
+        #scoreModalContent div {
+            margin-bottom: 10px;
+            font-size: 16px;
+        }
+
+        #restartButton, #instructionButton {
+            width: 100%;
+            padding: 10px;
+            background-color: #444;
+            color: white;
+            border: none;
+            cursor: pointer;
+            font-size: 16px;
+            margin-top: 10px;
+        }
+
+        #restartButton:hover, #instructionButton:hover {
+            background-color: #666;
+        }
+
+        /* Модальное окно с инструкцией */
+        #instructionModal {
+            display: none; /* Скрыто по умолчанию */
             position: fixed;
             top: 0;
             left: 0;
@@ -132,6 +147,7 @@
             align-items: center;
             z-index: 2000;
         }
+
         #instructionModalContent {
             background-color: #222;
             padding: 20px;
@@ -140,24 +156,29 @@
             width: 90%;
             max-width: 600px;
             max-height: 80vh;
-            overflow-y: auto;
-            touch-action: pan-y;
+            overflow-y: auto; /* Включаем вертикальную прокрутку */
+            touch-action: pan-y; /* Разрешаем прокрутку на touch-устройствах */
         }
+
         #instructionModalContent h2 {
             margin-top: 0;
             font-size: 24px;
         }
+
         #instructionModalContent h3 {
             font-size: 20px;
             margin-bottom: 10px;
         }
+
         #instructionModalContent p {
             margin: 10px 0;
         }
+
         #instructionModalContent ul {
             margin: 10px 0;
             padding-left: 20px;
         }
+
         #instructionModalContent li {
             margin-bottom: 5px;
         }
@@ -169,7 +190,12 @@
         <img src="splash.jpg" alt="Заставка">
     </div>
 
-    <!-- Игровой контейнер -->
+    <!-- Предупреждение об ориентации -->
+    <div id="orientationWarning">
+        Пожалуйста, поверните устройство в портретную ориентацию для продолжения игры.
+    </div>
+
+    <!-- Остальные элементы игры -->
     <div id="gameContainer">
         <canvas id="gameCanvas"></canvas>
     </div>
@@ -240,33 +266,6 @@
     <audio id="defeatSound" src="defeat.ogg"></audio>
 
     <script>
-        // Функция для показа заставки
-        function showSplashScreen() {
-            const splashScreen = document.getElementById('splashScreen');
-
-            // Плавное появление заставки
-            setTimeout(() => {
-                splashScreen.style.opacity = '1';
-            }, 100);
-
-            // Плавное исчезновение заставки через 5 секунд
-            setTimeout(() => {
-                splashScreen.style.opacity = '0';
-            }, 5000);
-
-            // Удаление заставки из DOM после завершения анимации
-            setTimeout(() => {
-                splashScreen.remove();
-                document.getElementById('scoreModal').style.display = 'flex'; // Показ меню
-            }, 7000);
-        }
-
-        // Запуск заставки при загрузке страницы
-        window.addEventListener('load', () => {
-            showSplashScreen();
-        });
-
-        // Игровая логика
         const canvas = document.getElementById('gameCanvas');
         const ctx = canvas.getContext('2d');
 
@@ -1090,7 +1089,7 @@
             warning.style.display = 'flex';
             warning.style.justifyContent = 'center';
             warning.style.alignItems = 'center';
-            warning.style.zIndex = '2000';
+            warning.style.zIndex = '4000';
             warning.style.fontSize = '24px';
             warning.style.textAlign = 'center';
             warning.style.padding = '20px';
@@ -1129,6 +1128,7 @@
             new Promise((resolve) => { backgroundImage.onload = resolve; })
         ]).then(() => {
             resizeCanvas(); // Устанавливаем начальные размеры холста
+            document.getElementById('scoreModal').style.display = 'flex';
         });
 
         // Логика для модального окна с инструкцией
@@ -1162,6 +1162,47 @@
 
             startY = currentY; // Обновляем начальную позицию
         });
+
+        // Функция для скрытия заставки
+        function hideSplashScreen() {
+            const splashScreen = document.getElementById('splashScreen');
+            splashScreen.style.opacity = '0'; // Плавное затемнение
+
+            // Удаляем заставку через 1 секунду (после завершения анимации)
+            setTimeout(() => {
+                splashScreen.style.display = 'none';
+                document.getElementById('scoreModal').style.display = 'flex'; // Показываем меню
+            }, 1000); // 1 секунда на анимацию исчезновения
+        }
+
+        // Функция для проверки ориентации
+        function checkOrientation() {
+            const isPortrait = window.innerHeight > window.innerWidth;
+            const orientationWarning = document.getElementById('orientationWarning');
+
+            if (!isPortrait) {
+                orientationWarning.style.display = 'flex'; // Показываем предупреждение
+                isPaused = true; // Ставим игру на паузу
+                stopBackgroundMusic(); // Останавливаем фоновую музыку
+            } else {
+                orientationWarning.style.display = 'none'; // Скрываем предупреждение
+                isPaused = false; // Снимаем с паузы
+                startBackgroundMusic(); // Возобновляем фоновую музыку
+            }
+        }
+
+        // Проверка ориентации при загрузке страницы
+        window.addEventListener('load', () => {
+            checkOrientation(); // Проверяем ориентацию сразу
+            const splashScreen = document.getElementById('splashScreen');
+            splashScreen.style.display = 'flex'; // Показываем заставку
+
+            // Запускаем таймер на 5 секунд, после чего скрываем заставку
+            setTimeout(hideSplashScreen, 5000);
+        });
+
+        // Проверка ориентации при изменении размера окна
+        window.addEventListener('resize', checkOrientation);
     </script>
 </body>
 </html>
