--- a/index_new.html
+++ b/index_new.html
@@ -17,121 +17,17 @@
             justify-content: center;
             align-items: center;
             z-index: 3000;
-            opacity: 0;
-            transition: opacity 2s ease-in-out;
+            opacity: 1;
+            transition: opacity 1s ease-in-out;
         }
 
         #splashScreen img {
             max-width: 100%;
             max-height: 100%;
-            object-fit: contain;
+            object-fit: contain; /* Сохраняет пропорции изображения */
         }
 
-        /* Остальные стили */
-        body {
-            margin: 0;
-            overflow: hidden;
-            background-color: #000;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            font-family: Arial, sans-serif;
-            color: white;
-        }
-        #gameContainer {
-            display: flex;
-            align-items: flex-start;
-            gap: 20px;
-            margin-bottom: 15vh;
-        }
-        canvas {
-            border: 2px solid white;
-            cursor: none;
-        }
-        #touchpad {
-            position: fixed;
-            bottom: -15px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: calc(var(--game-width) + 8px);
-            height: 15vh;
-            background-color: rgba(255, 255, 255, 0.1);
-            border-radius: 10px;
-            z-index: 1000;
-            touch-action: none;
-            border: 2px solid white;
-            box-sizing: border-box;
-        }
-
-        /* Стили для индикатора */
-        #touchIndicator {
-            position: absolute;
-            width: 40px;
-            height: 40px;
-            background-color: rgba(255, 255, 255, 0.3);
-            border-radius: 50%;
-            border: 2px solid rgba(255, 255, 255, 0.5);
-            transform: translate(-50%, -50%);
-            transition: background-color 0.2s ease, transform 0.1s ease;
-            pointer-events: none;
-            animation: pulse 1.5s infinite;
-        }
-
-        @keyframes pulse {
-            0% { transform: translate(-50%, -50%) scale(1); opacity: 0.7; }
-            50% { transform: translate(-50%, -50%) scale(1.2); opacity: 0.4; }
-            100% { transform: translate(-50%, -50%) scale(1); opacity: 0.7; }
-        }
-
-        #touchIndicator.active {
-            animation: none;
-            background-color: rgba(255, 0, 0, 0.5);
-            border-color: rgba(255, 0, 0, 0.8);
-        }
-
-        #scoreModal {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.8);
-            justify-content: center;
-            align-items: center;
-            z-index: 1000;
-        }
-        #scoreModalContent {
-            background-color: #222;
-            padding: 20px;
-            border-radius: 10px;
-            text-align: center;
-            color: white;
-            width: 80%;
-            max-width: 300px;
-        }
-        #scoreModalContent h3 {
-            margin: 0 0 10px 0;
-            font-size: 20px;
-        }
-        #scoreModalContent div {
-            margin-bottom: 10px;
-            font-size: 16px;
-        }
-        #restartButton, #instructionButton {
-            width: 100%;
-            padding: 10px;
-            background-color: #444;
-            color: white;
-            border: none;
-            cursor: pointer;
-            font-size: 16px;
-            margin-top: 10px;
-        }
-        #restartButton:hover, #instructionButton:hover {
-            background-color: #666;
-        }
+        /* Стили для предупреждения об ориентации */
         #orientationWarning {
             position: fixed;
             top: 0;
@@ -143,14 +39,104 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            z-index: 2000;
+            z-index: 4000;
             font-size: 24px;
             text-align: center;
             padding: 20px;
             box-sizing: border-box;
-        }
-        #instructionModal {
             display: none;
+        }
+
+        /* Основные стили игры */
+        body {
+            margin: 0;
+            overflow: hidden;
+            background-color: #000;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            font-family: Arial, sans-serif;
+            color: white;
+        }
+
+        #gameContainer {
+            display: flex;
+            align-items: flex-start;
+            gap: 20px;
+            margin-bottom: 15vh; /* Отступ снизу для сенсорной зоны */
+        }
+
+        canvas {
+            border: 2px solid white;
+            cursor: none;
+        }
+
+        #touchpad {
+            position: fixed;
+            bottom: -10px; /* Сенсорная зона на 10px ниже нижней границы холста */
+            left: 50%; /* Центрируем по горизонтали */
+            transform: translateX(-50%); /* Смещаем на половину ширины */
+            width: calc(var(--game-width) + 8px); /* Ширина сенсорной зоны равна ширине холста + 8px (рамка) */
+            height: 15vh; /* Высота сенсорной зоны */
+            background-color: rgba(255, 255, 255, 0.1);
+            border-radius: 10px; /* Закругленные углы */
+            z-index: 1000;
+            touch-action: none;
+        }
+
+        /* Модальные окна */
+        #scoreModal {
+            display: flex;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.8);
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+        }
+
+        #scoreModalContent {
+            background-color: #222;
+            padding: 20px;
+            border-radius: 10px;
+            text-align: center;
+            color: white;
+            width: 80%;
+            max-width: 300px;
+        }
+
+        #scoreModalContent h3 {
+            margin: 0 0 10px 0;
+            font-size: 20px;
+        }
+
+        #scoreModalContent div {
+            margin-bottom: 10px;
+            font-size: 16px;
+        }
+
+        #restartButton, #instructionButton {
+            width: 100%;
+            padding: 10px;
+            background-color: #444;
+            color: white;
+            border: none;
+            cursor: pointer;
+            font-size: 16px;
+            margin-top: 10px;
+        }
+
+        #restartButton:hover, #instructionButton:hover {
+            background-color: #666;
+        }
+
+        /* Модальное окно с инструкцией */
+        #instructionModal {
+            display: none; /* Скрыто по умолчанию */
             position: fixed;
             top: 0;
             left: 0;
@@ -161,6 +147,7 @@
             align-items: center;
             z-index: 2000;
         }
+
         #instructionModalContent {
             background-color: #222;
             padding: 20px;
@@ -169,24 +156,29 @@
             width: 90%;
             max-width: 600px;
             max-height: 80vh;
-            overflow-y: auto;
-            touch-action: pan-y;
+            overflow-y: auto; /* Включаем вертикальную прокрутку */
+            touch-action: pan-y; /* Разрешаем прокрутку на touch-устройствах */
         }
+
         #instructionModalContent h2 {
             margin-top: 0;
             font-size: 24px;
         }
+
         #instructionModalContent h3 {
             font-size: 20px;
             margin-bottom: 10px;
         }
+
         #instructionModalContent p {
             margin: 10px 0;
         }
+
         #instructionModalContent ul {
             margin: 10px 0;
             padding-left: 20px;
         }
+
         #instructionModalContent li {
             margin-bottom: 5px;
         }
@@ -198,15 +190,18 @@
         <img src="splash.jpg" alt="Заставка">
     </div>
 
-    <!-- Игровой контейнер -->
+    <!-- Предупреждение об ориентации -->
+    <div id="orientationWarning">
+        Пожалуйста, поверните устройство в портретную ориентацию для продолжения игры.
+    </div>
+
+    <!-- Остальные элементы игры -->
     <div id="gameContainer">
         <canvas id="gameCanvas"></canvas>
     </div>
 
-    <!-- Сенсорный ползунок с индикатором -->
-    <div id="touchpad">
-        <div id="touchIndicator"></div>
-    </div>
+    <!-- Сенсорный ползунок -->
+    <div id="touchpad"></div>
 
     <!-- Модальное окно для боевой сводки -->
     <div id="scoreModal">
@@ -271,38 +266,6 @@
     <audio id="defeatSound" src="defeat.ogg"></audio>
 
     <script>
-        // Логика для индикатора
-        const touchpad = document.getElementById('touchpad');
-        const touchIndicator = document.getElementById('touchIndicator');
-        let isTouching = false;
-
-        touchpad.addEventListener('touchstart', (e) => {
-            isTouching = true;
-            updateTouchIndicator(e);
-            touchIndicator.classList.add('active');
-        });
-
-        touchpad.addEventListener('touchmove', (e) => {
-            if (isTouching) {
-                updateTouchIndicator(e);
-            }
-        });
-
-        touchpad.addEventListener('touchend', () => {
-            isTouching = false;
-            touchIndicator.classList.remove('active');
-        });
-
-        function updateTouchIndicator(e) {
-            const touch = e.touches[0];
-            const touchpadRect = touchpad.getBoundingClientRect();
-            const x = touch.clientX - touchpadRect.left;
-            const y = touch.clientY - touchpadRect.top;
-            touchIndicator.style.left = `${x}px`;
-            touchIndicator.style.top = `${y}px`;
-        }
-
-        // Игровая логика
         const canvas = document.getElementById('gameCanvas');
         const ctx = canvas.getContext('2d');
 
@@ -497,6 +460,55 @@
 
             sound.play();
         }
+
+        // Логика для сенсорного ползунка
+        const touchpad = document.getElementById('touchpad');
+        let isTouching = false;
+        let touchStartX = 0;
+        let playerStartX = 0;
+        let isTap = false;
+
+        touchpad.addEventListener('touchstart', (e) => {
+            isTouching = true;
+            const touchpadRect = touchpad.getBoundingClientRect();
+            touchStartX = e.touches[0].clientX - touchpadRect.left; // Относительно левого края сенсорной зоны
+            playerStartX = player.x;
+            isTap = true;
+        });
+
+        touchpad.addEventListener('touchmove', (e) => {
+            if (!isTouching) return;
+
+            const touchpadRect = touchpad.getBoundingClientRect();
+            const touchCurrentX = e.touches[0].clientX - touchpadRect.left; // Относительно левого края сенсорной зоны
+            const deltaX = touchCurrentX - touchStartX;
+
+            if (Math.abs(deltaX) > 5) {
+                isTap = false;
+            }
+
+            const newPlayerX = playerStartX + deltaX;
+            player.x = Math.max(0, Math.min(newPlayerX, canvas.width - player.width));
+        });
+
+        touchpad.addEventListener('touchend', () => {
+            if (isTap) {
+                shoot();
+            }
+            isTouching = false;
+            isTap = false;
+        });
+
+        // Обработчик для паузы
+        canvas.addEventListener('touchstart', (e) => {
+            const touchY = e.touches[0].clientY; // Получаем координату Y касания
+
+            // Проверяем, что касание было выше сенсорной зоны управления
+            const touchpadRect = touchpad.getBoundingClientRect();
+            if (touchY < touchpadRect.top) {
+                togglePause(); // Ставим игру на паузу или снимаем с паузы
+            }
+        });
 
         function getRandomEnemyType() {
             const random = Math.random();
@@ -1077,7 +1089,7 @@
             warning.style.display = 'flex';
             warning.style.justifyContent = 'center';
             warning.style.alignItems = 'center';
-            warning.style.zIndex = '2000';
+            warning.style.zIndex = '4000';
             warning.style.fontSize = '24px';
             warning.style.textAlign = 'center';
             warning.style.padding = '20px';
@@ -1116,6 +1128,7 @@
             new Promise((resolve) => { backgroundImage.onload = resolve; })
         ]).then(() => {
             resizeCanvas(); // Устанавливаем начальные размеры холста
+            document.getElementById('scoreModal').style.display = 'flex';
         });
 
         // Логика для модального окна с инструкцией
@@ -1149,6 +1162,47 @@
 
             startY = currentY; // Обновляем начальную позицию
         });
+
+        // Функция для скрытия заставки
+        function hideSplashScreen() {
+            const splashScreen = document.getElementById('splashScreen');
+            splashScreen.style.opacity = '0'; // Плавное затемнение
+
+            // Удаляем заставку через 1 секунду (после завершения анимации)
+            setTimeout(() => {
+                splashScreen.style.display = 'none';
+                document.getElementById('scoreModal').style.display = 'flex'; // Показываем меню
+            }, 1000); // 1 секунда на анимацию исчезновения
+        }
+
+        // Функция для проверки ориентации
+        function checkOrientation() {
+            const isPortrait = window.innerHeight > window.innerWidth;
+            const orientationWarning = document.getElementById('orientationWarning');
+
+            if (!isPortrait) {
+                orientationWarning.style.display = 'flex'; // Показываем предупреждение
+                isPaused = true; // Ставим игру на паузу
+                stopBackgroundMusic(); // Останавливаем фоновую музыку
+            } else {
+                orientationWarning.style.display = 'none'; // Скрываем предупреждение
+                isPaused = false; // Снимаем с паузы
+                startBackgroundMusic(); // Возобновляем фоновую музыку
+            }
+        }
+
+        // Проверка ориентации при загрузке страницы
+        window.addEventListener('load', () => {
+            checkOrientation(); // Проверяем ориентацию сразу
+            const splashScreen = document.getElementById('splashScreen');
+            splashScreen.style.display = 'flex'; // Показываем заставку
+
+            // Запускаем таймер на 3 секунды, после чего скрываем заставку
+            setTimeout(hideSplashScreen, 3000);
+        });
+
+        // Проверка ориентации при изменении размера окна
+        window.addEventListener('resize', checkOrientation);
     </script>
 </body>
 </html>
