--- a/index_new.html
+++ b/index_new.html
@@ -141,9 +141,8 @@
         }
     </style>
 </head>
-<body>
-        <!-- Заставка в iframe -->
-		<iframe id="splashFrame" src="splash.html" style="width: 100%; height: 100%; border: none; position: fixed; top: 0; left: 0; z-index: 1000;"></iframe>
+<body>  <!-- Заставка в iframe -->
+		<iframe id="splashFrame" src="splash.html" style="width: 100%; height: 100%; border: none; position: fixed; top: 0; left: 0; z-index: 5000;"></iframe>
 		<script>
 		// Удаляем iframe с заставкой через 5 секунд
 		setTimeout(() => {
