--- a/splash.html
+++ b/splash.html
@@ -17,6 +17,7 @@
             align-items: center;
         }
         #splashImage {
+            display: none; /* Скрываем изображение по умолчанию */
             max-width: 100%;
             max-height: 100%;
             opacity: 0;
@@ -24,13 +25,26 @@
         }
         @keyframes fadeInOut {
             0% { opacity: 0; }
-            20% { opacity: 1; }
+            10% { opacity: 1; }
             80% { opacity: 1; }
             100% { opacity: 0; }
         }
     </style>
 </head>
 <body>
-    <img id="splashImage" src="splash.jpg" alt="Заставка">
+    <img id="splashImage" alt="Заставка">
+
+    <script>
+        // Показываем изображение только после полной загрузки
+        window.onload = function () {
+            const splashImage = document.getElementById('splashImage');
+            if (splashImage) {
+                splashImage.onload = function () {
+                    splashImage.style.display = 'block'; // Показываем изображение
+                };
+                splashImage.src = 'splash.jpg'; // Загружаем изображение
+            }
+        };
+    </script>
 </body>
 </html>
